# docx-editor

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  docx-editor.skill  pyproject.toml  release_notes.md  requirements.txt
.github/workflows/: ci.yml
references/: commands.md  workflows.md
scripts/: docx_agent.py
scripts/docx_engine/: __init__.py  advanced.py  annotations.py  batch_tools.py  constants.py  core.py  editing.py  errors.py  extended.py  formatting.py  reading.py  rendering.py  smart_features.py  tables.py
tests/: conftest.py  test_basic.py  test_batch.py  test_core.py  test_edge_cases.py  test_editing.py  test_formatting.py  test_performance.py  test_reading.py  test_smart_features.py  test_tables.py
